Added batch file for me to test blur
Added bach file
Added README.text

--- a/BlurTester/BlurTester.csproj
+++ b/BlurTester/BlurTester.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Utility\RunBlurTester.bat" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SuperfastBlur\SuperfastBlur.csproj">
